example/compilation/errors/semantic/type/redefined.arn


type date : struct  {
    jour : int;
    mois : int;
    annee : float;
} fstruct;

type date : struct  {
    annee : float;
} fstruct;
